# ai_marketing_engine

./: .gitignore  NESTED_RESOLVER_DEVELOPMENT_PLAN.md  PYTEST_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  setup.py
ai_marketing_engine/: __init__.py  handlers.py  main.py  models.py  mutations.py  queries.py  schema.py  types.py
ai_marketing_engine/handlers/: ai_coordination_utility.py  ai_marketing_utility.py  config.py
ai_marketing_engine/models/: activity_history.py  attribute_value.py  batch_loaders.py  cache.py  contact_profile.py  contact_request.py  corporation_profile.py  place.py  question.py  question_group.py  utils.py  utm_tag_data_collection.py  wizard.py
ai_marketing_engine/mutations/: activity_history.py  attribute_value.py  contact_profile.py  contact_request.py  corporation_profile.py  place.py  question.py  question_group.py  utm_tag_data_collection.py  wizard.py
ai_marketing_engine/queries/: activity_history.py  ai_marketing.py  attribute_value.py  contact_profile.py  contact_request.py  corporation_profile.py  place.py  question.py  question_group.py  utm_tag_data_collection.py  wizard.py
ai_marketing_engine/tests/: .env.example  ai_marketing_engine.graphql  conftest.py  load_sample_data.py  test_ai_marketing_engine.py  test_batch_loaders.py  test_cache_management.py  test_helpers.py  test_nested_resolvers.py
ai_marketing_engine/types/: activity_history.py  ai_marketing.py  attribute_value.py  contact_profile.py  contact_request.py  corporation_profile.py  place.py  question.py  question_group.py  wizard.py  (+1 more)
docs/: DEVELOPMENT_PLAN.md
(+6 files in other folders)
