[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-Marketing-Engine"
version = "0.0.1"
description = "AI Marketing Engine"
authors = [{ name = "Idea Bosque", email = "ideabosque@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "SilvaEngine-Utility",
    "SilvaEngine-DynamoDB-Base",
    "graphene",
    "promise",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
include = ["ai_marketing_engine*"]

[tool.pytest.ini_options]
testpaths = ["ai_marketing_engine/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short --color=yes"
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require external services (DB, API, etc.)",
    "slow: Tests that take significant time to run",
    "nested_resolvers: Tests for nested GraphQL resolver functionality",
    "skip: Tests that are temporarily disabled",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
minversion = "7.0"
console_output_style = "progress"
